# XplnObj

./: .gitignore  BUILD_MODERNIZATION.md  CMakePresets.json  MODERNIZATION_2025.md  build.bat  build.sh
cmake/: StsProjectDesc.cmake  XplnObjConfig.cmake.in
example/: CMakeLists.txt
src/: CMakeLists.txt
src-test/: CMakeLists.txt
